--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     
   <system.web>
@@ -12,10 +12,7 @@
           false at all other times. For more information, refer to the documentation about
           debugging ASP .NET files.
     -->
-    <compilation 
-         defaultLanguage="c#"
-         debug="true"
-    />
+    <compilation defaultLanguage="c#" debug="true" />
 
     <!--  CUSTOM ERROR MESSAGES
           Set customError mode values to control the display of user-friendly 
@@ -27,9 +24,7 @@
           on the local Web server. This setting is recommended for security purposes, so 
           that you do not display application detail information to remote clients.
     -->
-    <customErrors 
-    mode="RemoteOnly" 
-    /> 
+    <customErrors mode="RemoteOnly" /> 
 
     <!--  AUTHENTICATION 
           This section sets the authentication policies of the application. Possible modes are "Windows", "Forms", 
@@ -44,38 +39,26 @@
           application trace log by browsing the "trace.axd" page from your web application
           root. 
     -->
-    <trace
-        enabled="false"
-        requestLimit="10"
-        pageOutput="false"
-        traceMode="SortByTime"
-		localOnly="true"
-    />
+    <trace enabled="false" requestLimit="10" pageOutput="false" traceMode="SortByTime" localOnly="true" />
 
     <!--  SESSION STATE SETTINGS
           By default ASP .NET uses cookies to identify which requests belong to a particular session. 
           If cookies are not available, a session can be tracked by adding a session identifier to the URL. 
           To disable cookies, set sessionState cookieless="true".
     -->
-    <sessionState 
-            mode="InProc"
-            stateConnectionString="tcpip=127.0.0.1:42424"
-            sqlConnectionString="data source=127.0.0.1;user id=sa;password=Sa123456"
-            cookieless="false" 
-            timeout="20" 
-    />
+    <sessionState mode="InProc" stateConnectionString="tcpip=127.0.0.1:42424" sqlConnectionString="data source=127.0.0.1;user id=sa;password=myp8ssw0rd" cookieless="false" timeout="20" />
 
     <!--  GLOBALIZATION
           This section sets the globalization settings of the application. 
     -->
-    <globalization 
-            requestEncoding="utf-8" 
-            responseEncoding="utf-8" 
-   />
+    <globalization requestEncoding="utf-8" responseEncoding="utf-8" />
    
  </system.web>
 <appSettings>
-	<add key="smartConnection" value="server=.\SQLEXPRESS;uid=sa;pwd=;database=smartRestaurant"/>
+	<add key="smartConnection" value="server=.\SQLEXPRESS;uid=sa;pwd=myp8ssw0rd;database=smartRestaurant" />
 </appSettings>
+    <system.webServer>
+        <directoryBrowse enabled="false" />
+    </system.webServer>
 
 </configuration>
